--- a/Back/src/ProEventos.Application/ProEventos.Application.csproj
+++ b/Back/src/ProEventos.Application/ProEventos.Application.csproj
@@ -9,4 +9,7 @@
     <ProjectReference Include="..\ProEventos.Domain\ProEventos.Domain.csproj" />
     <ProjectReference Include="..\ProEventos.Persistence\ProEventos.Persistence.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
 </Project>
